--- a/Src/calculator.html
+++ b/Src/calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/Src/styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
   </head>
   <body>
@@ -96,7 +96,7 @@
       ">Clear</button>
     </p>
 
-    <script src="/Src/scripts/scripts.js">
+    <script src="scripts.js">
       
     </script>
   </body>
